--- a/index.html
+++ b/index.html
@@ -7,25 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/shared.css">
-    <title>Document</title>
+    <title>griot Theater</title>
 </head>
 
 <body>
-
     <header>
-
-        <div class="nav-bar">
-            <ul class="nav-items">
-                <li><a href="">Griot Theater</a></li>
+        <a class="logo" href="">Griot Theater</a>
+        <nav>
+            <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./features-page.html">Features</a></li>
                 <li><a href="./our-actors-page.html">Our Actors</a></li>
                 <li><a href="./mission-page-page.html">Mission</a></li>
                 <li><a href="./contact-page.html">Contact</a></li>
+
             </ul>
-        </div>
-        
+        </nav>
     </header>
+    <main>
+
+        <div class="hero-image">
+
+            <img src="images/theater-image-background.jpg" alt="">
+<span class="hero-title">
+    <h1>Featured Shows</h1>
+
+</span>
+        </div>
+    </main>
 </body>
 
 </html>
