added main section

--- a/index.html
+++ b/index.html
@@ -11,30 +11,108 @@
 </head>
 
 <body>
-    <header>
-        <a class="logo" href="">Griot Theater</a>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./features-page.html">Features</a></li>
-                <li><a href="./our-actors-page.html">Our Actors</a></li>
-                <li><a href="./mission-page-page.html">Mission</a></li>
-                <li><a href="./contact-page.html">Contact</a></li>
 
-            </ul>
+    <header>
+        <nav>
+            <div class="nav-container">
+                <ul class="nav-links">
+                    <li class="logo"><a id="logo" href="">GriotTheater<a>
+                    <li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./features-page.html">Features</a></li>
+                    <li><a href="./our-actors-page.html">Our Actors</a></li>
+                    <li><a href="./mission-page-page.html">Mission</a></li>
+                    <li><a href="./contact-page.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <main>
 
-        <div class="hero-image">
+    <div class="hero-image">
+        <img src="images/theater-image-background.jpg" alt="">
+        <span class="hero-title">
+            <h1>Featured Shows</h1>
+        </span>
+    </div>
 
-            <img src="images/theater-image-background.jpg" alt="">
-<span class="hero-title">
-    <h1>Featured Shows</h1>
-
-</span>
+    <section class="event-section">
+        <div class="event-container">
+            <div class="date-container">
+                <p>Sept 20022</p>
+            </div>
+            <div class="event-content-container">
+                <div class="event-image">
+                    <img src="/images/a-raisin-in-the-sun-theater-1.jpg" alt="">
+                </div>
+                <div class="event-info">
+                    <div class="info-heading">A Raisin In The Sun</div>
+                    <div class="date">sept 19 2022 - March 20, 2022</div>
+                    <div class="location">Griot Theatre 223 State St Chicago,IL</div>
+                    <div class="cost">75$
+                    </div>
+                </div>
+                <button class="event-info button">Learn More</button>
+            </div>
         </div>
-    </main>
+
+        <div class="event-container">
+
+            <div class="event-content-container">
+                <div class="event-image">
+                    <img src="/images/a-raisin-in-the-sun-theater-1.jpg" alt="">
+                </div>
+                <div class="event-info">
+                    <div class="info-heading">A Raisin In The Sun</div>
+                    <div class="date">sept 19 2022 - March 20, 2022</div>
+                    <div class="location">Griot Theatre 223 State St Chicago,IL</div>
+                    <div class="cost">75$
+                    </div>
+                </div>
+                <button class="event-info button">Learn More</button>
+            </div>
+        </div>
+
+        <span class="event-container">
+            <div class="event-content-container">
+                <div class="event-image">
+                    <img src="/images/a-raisin-in-the-sun-theater-1.jpg" alt="">
+                </div>
+                <div class="event-info">
+                    <div class="info-heading">A Raisin In The Sun</div>
+                    <div class="date">sept 19 2022 - March 20, 2022</div>
+                    <div class="location">Griot Theatre 223 State St Chicago,IL</div>
+                    <div class="cost">75$
+                    </div>
+                </div>
+                <button class="event-info button">Learn More</button>
+            </div>
+        </span>
+
+        <div class="event-container">
+            <div class="event-content-container">
+                <div class="event-image">
+                    <img src="/images/a-raisin-in-the-sun-theater-1.jpg" alt="">
+                </div>
+                <div class="event-info">
+                    <div class="info-heading">A Raisin In The Sun</div>
+                    <div class="date">sept 19 2022 - March 20, 2022</div>
+                    <div class="location">Griot Theatre 223 State St Chicago,IL</div>
+                    <div class="cost">75$
+                    </div>
+                </div>
+                <button class="event-info button">Learn More</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="menu-container">
+            <div class="menu-items">
+                <div class="map">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
