now adding the footer and displaying all the menu items

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                     <div class="cost">75$
                     </div>
                 </div>
-                <button class="event-info button">Learn More</button>
+                <div class="info-button-container">
+                    <button class="event-info button">Learn More</button>
+                </div>
+
             </div>
         </div>
 
@@ -68,7 +71,9 @@
                     <div class="cost">75$
                     </div>
                 </div>
-                <button class="event-info button">Learn More</button>
+                <div class="info-button-container">
+                    <button class="event-info button">Learn More</button>
+                </div>
             </div>
         </div>
 
@@ -84,7 +89,9 @@
                     <div class="cost">75$
                     </div>
                 </div>
-                <button class="event-info button">Learn More</button>
+                <div class="info-button-container">
+                    <button class="event-info button">Learn More</button>
+                </div>
             </div>
         </span>
 
@@ -100,15 +107,21 @@
                     <div class="cost">75$
                     </div>
                 </div>
-                <button class="event-info button">Learn More</button>
+                <div class="info-button-container">
+                    <button class="event-info button">Learn More</button>
+                </div>
             </div>
         </div>
     </section>
     <footer>
         <div class="menu-container">
-            <div class="menu-items">
-                <div class="map">
-                    <img src="" alt="">
+            <div class="map">
+                <a href="https://www.google.com/maps"><img src="/images/map.jpeg" alt="">
+                    <div class="menu-items">
+                    </a>
+                    <div class="menu-info">
+                        <h2>Info</h2>
+                </div>
                 </div>
             </div>
         </div>
