This is my finale commit

--- a/index.html
+++ b/index.html
@@ -113,18 +113,40 @@
             </div>
         </div>
     </section>
-    <footer>
-        <div class="menu-container">
-            <div class="map">
-                <a href="https://www.google.com/maps"><img src="/images/map.jpeg" alt="">
-                    <div class="menu-items">
-                    </a>
-                    <div class="menu-info">
-                        <h2>Info</h2>
-                </div>
-                </div>
-            </div>
-        </div>
+
+
+    <footer class="menu-grid">
+        <a id="map" href="https://www.google.com/maps"><img src="/images/map.jpeg" alt="">
+        </a>
+        <nav class="menu-grid-items">
+            <ul class="menu-items">
+                <a href=""><li class="grid-item-title">Info</li></a>
+                <a href=""><li>Chicago,IL 60611 United States</li></a>
+                <a href=""><li>example@example.com</li></a>
+                <a href=""><li>Call Us: 708-555-4324</li></a>
+            </ul>
+        </nav>
+
+        <nav class="menu-grid-items">
+            <ul class="menu-items">
+                <li class="grid-item-title">Shows</li>
+                <li>The Piano Lesson</li>
+                <li>A Raisin In The Sun</li>
+                <li>FAME</li>
+                <li>The Color Purple</li>
+            </ul>
+        </nav>
+
+        <nav class="menu-grid-items">
+            <ul class="menu-items">
+                <li class="grid-item-title">Social</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Youtube</li>
+                <li>Instagram</li>
+            </ul>
+        </nav>
+
     </footer>
 </body>
 
