--- a/contact-page.html
+++ b/contact-page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
 <link rel="stylesheet" href="./css/shared.css">
-    <title>Document</title>
+    <title>hello</title>
 </head>
 <body>
     
